# adif-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: data.rs  grammar.lalrpop  lib.rs  parser.rs
src/data/: enums.rs  mod.rs  types.rs
