[package]
name = "adif"
version = "0.1.1"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "Amateur Data Interchange Format parsing and generation tools for Rust"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
indexmap = "1.6.2"
regex = "1"
lexical = "5.2.2"
